--- a/styles/style.css
+++ b/styles/style.css
@@ -230,7 +230,7 @@
 .staff {
   padding-top: 100px;
   padding-bottom: 140px;
-  background-image: url("C:\Users\jswen\OneDrive\Desktop\Practicum\se_project_library\images\staff_picks_background.jpg");
+  background-image: url("../images/staff_picks_background.jpg");
 }
 
 .staff__title {
@@ -452,7 +452,7 @@
   align-items: center;
 }
 .footer__column-link:hover {
-  color: #c1c1c1;
+  color: red;
 }
 
 .footer__social-icon {
