--- a/styles/style.css
+++ b/styles/style.css
@@ -248,6 +248,7 @@
   font-weight: 400;
   margin: 24px 0 0;
   border-bottom: 68px;
+  color: #f2f2f2;
 }
 
 .staff__card {
@@ -454,7 +455,7 @@
   align-items: center;
 }
 .footer__column-link:hover {
-  color: red;
+  color: #c1c1c1;
 }
 
 .footer__social-icon {
