--- a/styles/style.css
+++ b/styles/style.css
@@ -46,6 +46,10 @@
   border-top: 8px;
 }
 
+.nav__link:hover {
+  color: #1f69c9;
+}
+
 .header__title {
   max-width: 544px;
   margin-top: 150px;
@@ -84,6 +88,10 @@
 .header__link {
   color: #2f80ed;
   text-decoration: none;
+}
+
+.header__link:hover {
+  color: #1f69c9;
 }
 
 .header__address {
@@ -331,11 +339,9 @@
   list-style-type: none;
   padding: 0;
   margin: 100px 0 0;
-  /* Add styles */
 }
 
 .step {
-  /* Add styles */
 }
 
 .step__title {
@@ -429,7 +435,6 @@
 }
 
 .footer__list {
-  /* The code below removes the default browser styles for lists */
   list-style-type: none;
   padding: 0;
   margin: 0;
