--- a/styles/style.css
+++ b/styles/style.css
@@ -260,24 +260,20 @@
   color: #f2f2f2;
 }
 
-.staff__card {
-  list-style-type: none;
-  margin: 68px auto 0;
-  display: flex;
-  flex-wrap: wrap;
-  position: relative;
-  justify-content: center;
-  padding-left: 0;
-  list-style-type: none;
-  gap: 40px;
+.staff__cards {
+  margin: auto;
   max-width: 760px;
   margin-top: 68px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style-type: none;
+  gap: 40px 40px;
+  list-style-type: none;
+  padding: 0;
 }
 
-/* Add the CSS rule for your new class here. Make sure to place it before .card: parents should precede their children */
-
 .card {
-  border-radius: 6px;
   border-radius: 6px;
   padding: 32px 40px 20px 32px;
   box-sizing: border-box;
