--- a/styles/style.css
+++ b/styles/style.css
@@ -364,7 +364,6 @@
 
 .about {
   display: flex;
-  padding: 100px 80px;
   background-color: #1f1f1f;
   color: #fff;
   overflow: hidden;
@@ -374,6 +373,8 @@
 }
 
 .about__title {
+  display: flex;
+  margin-left: 60px;
   margin-right: 120px;
   font-size: 20px;
   line-height: 30px;
@@ -383,6 +384,8 @@
 }
 
 .about__content {
+  display: flex;
+  flex-direction: column;
   font-size: 20px;
   line-height: 30px;
   font-weight: 400;
@@ -392,8 +395,8 @@
 }
 
 .about__paragraph {
+  display: flex;
   margin-bottom: 32px;
-  margin-right: auto;
   z-index: 1;
 }
 
