--- a/styles/style.css
+++ b/styles/style.css
@@ -369,33 +369,30 @@
   overflow: hidden;
   position: relative;
   box-sizing: border-box;
+  gap: 120px;
   z-index: 0;
 }
 
 .about__title {
-  display: flex;
-  margin-left: 60px;
-  margin-right: 120px;
+  padding: 100px 80px;
   font-size: 20px;
   line-height: 30px;
   font-weight: 500;
-  max-width: 154px;
   z-index: 1;
 }
 
 .about__content {
-  display: flex;
-  flex-direction: column;
+  padding: 100px 80px;
   font-size: 20px;
   line-height: 30px;
   font-weight: 400;
   max-width: 660px;
-  padding-left: 120px;
+
   z-index: 1;
 }
 
 .about__paragraph {
-  display: flex;
+  margin: auto;
   margin-bottom: 32px;
   z-index: 1;
 }
