--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,4 @@
 .page {
-  /* Add page class properties here */
   min-width: 1100px;
   max-width: 1600px;
   font-family: Helvetica neue, arial, sans-serif;
@@ -309,8 +308,6 @@
   font-size: 14px;
   line-height: 20px;
   color: #838383;
-  /* Auto margins applied on a flex item automatically extend specified margin to occupy the extra space in the flex container */
-  /* In our case, this pushes the element down to the bottom */
   margin-top: auto;
 }
 
@@ -364,37 +361,42 @@
 
 .about {
   display: flex;
+  flex-wrap: wrap;
   background-color: #1f1f1f;
   color: #fff;
   overflow: hidden;
   position: relative;
+  justify-content: text-align;
   box-sizing: border-box;
-  gap: 120px;
+  column-gap: 120px;
   z-index: 0;
 }
 
 .about__title {
-  padding: 100px 80px;
+  margin: 0;
+  margin-right: 120px;
   font-size: 20px;
   line-height: 30px;
   font-weight: 500;
+  max-width: 154px;
   z-index: 1;
 }
 
 .about__content {
+  display: flex;
+
   padding: 100px 80px;
   font-size: 20px;
   line-height: 30px;
   font-weight: 400;
   max-width: 660px;
-
   z-index: 1;
 }
 
 .about__paragraph {
-  margin: auto;
-  margin-bottom: 32px;
-  z-index: 1;
+  margin: 0;
+  position: relative;
+  z-index: 2;
 }
 
 .about__circle {
