--- a/styles/style.css
+++ b/styles/style.css
@@ -241,6 +241,7 @@
   background-size: auto;
   background-position: auto;
   background-image: url("../images/staff_picks_background.jpg");
+  background-repeat: repeat;
 }
 
 .staff__title {
@@ -269,7 +270,6 @@
   justify-content: center;
   list-style-type: none;
   gap: 40px 40px;
-  list-style-type: none;
   padding: 0;
 }
 
@@ -280,6 +280,7 @@
   height: 420px;
   width: 360px;
   margin: auto;
+  margin-bottom: 68px;
 }
 
 .card__content {
@@ -294,7 +295,7 @@
   font-size: 20px;
   line-height: 30px;
   font-weight: 700;
-  margin: 0;
+  margin: auto;
 }
 
 .card__text {
