--- a/styles/style.css
+++ b/styles/style.css
@@ -238,9 +238,9 @@
 }
 
 .staff {
-  background-size: cover;
   background-position: auto;
   background-image: url("../images/staff_picks_background.jpg");
+  padding: 100 80px;
 }
 
 .staff__title {
@@ -249,6 +249,7 @@
   line-height: 52px;
   margin: 0 0 24px;
   color: #f2f2f2;
+  padding-top: 100px;
 }
 
 .staff__subtitle {
@@ -256,7 +257,7 @@
   font-size: 20px;
   line-height: 30px;
   font-weight: 400;
-  margin: 24px 0 0;
+  margin: 24px 0 0px;
   color: #f2f2f2;
 }
 
@@ -269,6 +270,7 @@
   justify-content: center;
   list-style-type: none;
   gap: 40px 40px;
+  padding-bottom: 80px;
 }
 
 .card {
@@ -277,8 +279,6 @@
   box-sizing: border-box;
   height: 420px;
   width: 360px;
-  align-items: center;
-  border-radius: 6px;
 }
 
 .card__content {
@@ -286,6 +286,7 @@
   height: 100%;
   display: flex;
   flex-wrap: wrap;
+  border-radius: 6px;
 }
 
 .card__title {
