--- a/styles/style.css
+++ b/styles/style.css
@@ -238,7 +238,7 @@
 }
 
 .staff {
-  background-position: auto;
+  background-size: cover;
   background-image: url("../images/staff_picks_background.jpg");
   padding: 100 80px;
 }
@@ -270,6 +270,7 @@
   justify-content: center;
   list-style-type: none;
   gap: 40px 40px;
+  padding: 0;
   padding-bottom: 80px;
 }
 
@@ -285,7 +286,7 @@
   width: 100%;
   height: 100%;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   border-radius: 6px;
 }
 
@@ -293,14 +294,13 @@
   font-size: 20px;
   line-height: 30px;
   font-weight: 700;
-  margin: auto;
+  margin: 0;
 }
 
 .card__text {
   margin: 20px 0 0;
   font-size: 16px;
   line-height: 24px;
-  margin-bottom: auto;
 }
 
 .card__footer {
@@ -336,7 +336,7 @@
 }
 
 .step {
-  flex-basis: auto;
+  flex-basis: 220px;
 }
 
 .step__title {
@@ -353,9 +353,8 @@
 }
 
 .step__description {
-  max-width: 220px;
-  width: 100%;
   margin: 10px 0 0;
+  flex-basis: auto;
 }
 
 .about {
