--- a/styles/style.css
+++ b/styles/style.css
@@ -284,6 +284,7 @@
 .card__content {
   width: 100%;
   height: 100%;
+  max-width: 760px;
   display: flex;
   flex-direction: column;
   border-radius: 6px;
