--- a/styles/style.css
+++ b/styles/style.css
@@ -271,7 +271,8 @@
   justify-content: center;
   list-style-type: none;
   gap: 40px 40px;
-  padding-bottom: 80px;
+  padding: 0;
+  padding-bottom: 68px;
 }
 
 .card {
