--- a/styles/style.css
+++ b/styles/style.css
@@ -240,7 +240,7 @@
 .staff {
   background-size: cover;
   background-image: url("../images/staff_picks_background.jpg");
-  padding: 100px 140px;
+  padding: 100px 0 140px;
 }
 
 .staff__title {
